add jvm option for default locale provider change